# CookingBook

./: .gitignore  MainPage.html  README.md  SecondPage.html  TODO.md  about.html  addRecipe.html  auto-pull.py  contacts.css  contacts.html  data.js  homescape.css  homescape.html  homescape.js  index.css  index.html  publish.css  publish.html  recipes.xml  script.js  search.css  search.html  style.css  view_property.css  view_property.html  view_property.js
JavaSrc/src/: CookingBook.java  Recipe.java  RecipeComparator.java
Server/: Cargo.toml
Server/src/: main.rs
src/: CookingBook.java  Main.java
